# tech-debt-agent

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  quick_start.md
bump-version/: SKILL.md
bump-version/scripts/: bump_version.py
src/tda/: pyproject.toml
src/tda/src/tda/: __init__.py  agent.py  cli.py  logging_config.py  system_prompt.prompty  tools.py
src/tde/: pyproject.toml
src/tde/src/tde/: __init__.py  cli.py  formatter.py  parser.py  runner.py
