[project]
name = "tda"
version = "0.1.1"
description = "Technical Debt Agent - AI agent using tde for codebase analysis"
readme = "../../README.md"
authors = [
    { name = "Oleksii Nikiforov", email = "alexey_nikiforovall@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "tde",
]

[project.scripts]
tda = "tda.cli:main"

[tool.uv.sources]
tde = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
